--- a/src/components/Desc.css
+++ b/src/components/Desc.css
@@ -7,10 +7,28 @@
     border-radius: 3vw;
     border-top-left-radius: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    z-index: -5;
 }
 
 .desc p {
     color: aliceblue;
     text-align: justify;
     padding: 3vw;
+}
+
+.desc h3 {
+    color: aliceblue;
+    text-align: center;
+}
+
+.project-button {
+    font-size: 3vw;
+    text-align: center;
+    justify-content: center;
+    margin-left: 22vw;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: maroon;
+    border-radius: 2vw;
+    padding: 1vw;
+    border: 1px solid snow;
 }
